--- a/Wins/MainWin.xaml
+++ b/Wins/MainWin.xaml
@@ -3,12 +3,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:consts="clr-namespace:Sheas_Cealer.Consts"
         xmlns:convs="clr-namespace:Sheas_Cealer.Convs"
         xmlns:preses="clr-namespace:Sheas_Cealer.Preses"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance preses:MainPres}" AllowDrop="True"
-        Style="{DynamicResource CommonWindow}" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" SizeToContent="Height" Width="500" MinWidth="500"
+        Style="{DynamicResource CommonWindow}" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" SizeToContent="Height" Width="600"
         Loaded="MainWin_Loaded" Closing="MainWin_Closing" DragEnter="MainWin_DragEnter" Drop="MainWin_Drop" KeyDown="MainWin_KeyDown">
     <Window.Resources>
         <consts:MainConst x:Key="MainConst" />
@@ -16,7 +17,7 @@
 
     <Grid Margin="5">
         <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
@@ -28,7 +29,7 @@
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
 
-            <Button Grid.Column="0" Margin="5"
+            <Button Grid.Column="0" Margin="5" ToolTip="{Binding SettingsModeButtonToolTip, Source={StaticResource MainConst}}"
                     Click="SettingsModeButton_Click">
                 <Button.Content>
                     <Binding Path="Mode">
@@ -40,7 +41,7 @@
             </Button>
 
             <TextBox x:Name="SettingsBox"
-                     Grid.Column="1" Margin="5" VerticalContentAlignment="Center"
+                     Grid.Column="1" Margin="5" VerticalContentAlignment="Center" md:HintAssist.IsFloating="True"
                      TextChanged="SettingsBox_TextChanged" PreviewDragOver="MainWin_DragEnter">
                 <TextBox.Text>
                     <MultiBinding Mode="OneWay" UpdateSourceTrigger="PropertyChanged">
@@ -49,26 +50,27 @@
                         </MultiBinding.Converter>
 
                         <Binding Path="Mode" />
-                        <Binding Path="IsFocused" RelativeSource="{RelativeSource Self}" />
                         <Binding Path="BrowserPath" />
                         <Binding Path="UpstreamUrl" />
                         <Binding Path="ExtraArgs" />
                     </MultiBinding>
                 </TextBox.Text>
-                <TextBox.Foreground>
-                    <MultiBinding Mode="OneWay">
-                        <MultiBinding.Converter>
-                            <convs:MainSettingsBoxForegroundConv />
-                        </MultiBinding.Converter>
-
-                        <Binding Path="Mode" />
-                        <Binding Path="BrowserPath" />
-                        <Binding Path="UpstreamUrl" />
-                        <Binding Path="ExtraArgs" />
-                    </MultiBinding>
-                </TextBox.Foreground>
+                <TextBox.ToolTip>
+                    <Binding Path="Mode">
+                        <Binding.Converter>
+                            <convs:MainSettingsBoxToolTipConv />
+                        </Binding.Converter>
+                    </Binding>
+                </TextBox.ToolTip>
+                <md:HintAssist.Hint>
+                    <Binding Path="Mode">
+                        <Binding.Converter>
+                            <convs:MainSettingsBoxHintConv />
+                        </Binding.Converter>
+                    </Binding>
+                </md:HintAssist.Hint>
             </TextBox>
-            <Button Grid.Column="2" Margin="5"
+            <Button Grid.Column="2" Margin="5" ToolTip="{Binding SettingsFunctionButtonToolTip, Source={StaticResource MainConst}}"
                     Click="SettingsFunctionButton_Click">
                 <Button.Content>
                     <Binding Path="Mode">
@@ -81,8 +83,8 @@
         </Grid>
 
         <Button IsDefault="True"
-                Grid.Row="1" Margin="5" Content="{Binding StartCealButtonContent, Source={StaticResource MainConst}}"
-                Click="StartCealButton_Click">
+                Grid.Row="1" Margin="5" Content="{Binding StartCealButtonContent, Source={StaticResource MainConst}}" ToolTip="{Binding StartCealButtonToolTip, Source={StaticResource MainConst}}"
+                Click="StartCealButton_Click" PreviewMouseDown="StartCealButton_PreviewMouseDown">
 
             <Button.IsEnabled>
                 <MultiBinding>
@@ -101,13 +103,14 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
             <Button x:Name="EditHostButton"
-                    Grid.Column="0" Margin="5" Content="{Binding EditHostButtonContent, Source={StaticResource MainConst}}"
+                    Grid.Column="0" Margin="5" Content="{Binding EditHostButtonContent, Source={StaticResource MainConst}}" ToolTip="{Binding EditHostButtonToolTip, Source={StaticResource MainConst}}"
                     Click="EditHostButton_Click" />
             <Button x:Name="UpdateHostButton"
-                    Grid.Column="1" Margin="5" Content="{Binding UpdateHostButtonContent, Source={StaticResource MainConst}}"
+                    Grid.Column="1" Margin="5" Content="{Binding UpdateHostButtonContent, Source={StaticResource MainConst}}" ToolTip="{Binding UpdateHostButtonToolTip, Source={StaticResource MainConst}}"
                     Click="UpdateHostButton_Click">
                 <Button.IsEnabled>
                     <Binding Path="UpstreamUrl">
@@ -117,8 +120,19 @@
                     </Binding>
                 </Button.IsEnabled>
             </Button>
+            <Button x:Name="ThemesButton"
+                    Grid.Column="2" Margin="5" ToolTip="{Binding ThemesButtonToolTip, Source={StaticResource MainConst}}"
+                    Click="ThemesButton_Click">
+                <Button.Content>
+                    <Binding Path="IsLightTheme">
+                        <Binding.Converter>
+                            <convs:MainThemesButtonContentConv />
+                        </Binding.Converter>
+                    </Binding>
+                </Button.Content>
+            </Button>
             <Button x:Name="AboutButton"
-                    Grid.Column="2" Margin="5" Content="{Binding AboutButtonContent, Source={StaticResource MainConst}}"
+                    Grid.Column="3" Margin="5" Content="{Binding AboutButtonContent, Source={StaticResource MainConst}}" ToolTip="{Binding AboutButtonToolTip, Source={StaticResource MainConst}}"
                     Click="AboutButton_Click" />
         </Grid>
     </Grid>
