--- a/Wins/MainWin.xaml
+++ b/Wins/MainWin.xaml
@@ -11,10 +11,6 @@
         d:DataContext="{d:DesignInstance preses:MainPres}" AllowDrop="True"
         Style="{DynamicResource CommonWindow}" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" SizeToContent="Height" Width="600"
         Loaded="MainWin_Loaded" Closing="MainWin_Closing" DragEnter="MainWin_DragEnter" Drop="MainWin_Drop" KeyDown="MainWin_KeyDown">
-    <Window.Resources>
-        <consts:MainConst x:Key="MainConst" />
-    </Window.Resources>
-
     <Grid Margin="5">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -29,7 +25,7 @@
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
 
-            <Button Grid.Column="0" Margin="5" ToolTip="{Binding SettingsModeButtonToolTip, Source={StaticResource MainConst}}"
+            <Button Grid.Column="0" Margin="5" ToolTip="{Binding Source={x:Static consts:MainConst.SettingsModeButtonToolTip}}"
                     Click="SettingsModeButton_Click">
                 <Button.Content>
                     <Binding Path="Mode">
@@ -70,7 +66,7 @@
                     </Binding>
                 </md:HintAssist.Hint>
             </TextBox>
-            <Button Grid.Column="2" Margin="5" ToolTip="{Binding SettingsFunctionButtonToolTip, Source={StaticResource MainConst}}"
+            <Button Grid.Column="2" Margin="5" ToolTip="{Binding Source={x:Static consts:MainConst.SettingsFunctionButtonToolTip}}"
                     Click="SettingsFunctionButton_Click">
                 <Button.Content>
                     <Binding Path="Mode">
@@ -83,7 +79,7 @@
         </Grid>
 
         <Button IsDefault="True"
-                Grid.Row="1" Margin="5" Content="{Binding StartCealButtonContent, Source={StaticResource MainConst}}" ToolTip="{Binding StartCealButtonToolTip, Source={StaticResource MainConst}}"
+                Grid.Row="1" Margin="5" Content="{Binding Source={x:Static consts:MainConst.StartCealButtonContent}}" ToolTip="{Binding Source={x:Static consts:MainConst.StartCealButtonToolTip}}"
                 Click="StartCealButton_Click" PreviewMouseDown="StartCealButton_PreviewMouseDown">
 
             <Button.IsEnabled>
@@ -107,10 +103,10 @@
             </Grid.ColumnDefinitions>
 
             <Button x:Name="EditHostButton"
-                    Grid.Column="0" Margin="5" Content="{Binding EditHostButtonContent, Source={StaticResource MainConst}}" ToolTip="{Binding EditHostButtonToolTip, Source={StaticResource MainConst}}"
+                    Grid.Column="0" Margin="5" Content="{Binding Source={x:Static consts:MainConst.EditHostButtonContent}}" ToolTip="{Binding Source={x:Static consts:MainConst.EditHostButtonToolTip}}"
                     Click="EditHostButton_Click" />
             <Button x:Name="UpdateHostButton"
-                    Grid.Column="1" Margin="5" Content="{Binding UpdateHostButtonContent, Source={StaticResource MainConst}}" ToolTip="{Binding UpdateHostButtonToolTip, Source={StaticResource MainConst}}"
+                    Grid.Column="1" Margin="5" Content="{Binding Source={x:Static consts:MainConst.UpdateHostButtonContent}}" ToolTip="{Binding Source={x:Static consts:MainConst.UpdateHostButtonToolTip}}"
                     Click="UpdateHostButton_Click">
                 <Button.IsEnabled>
                     <Binding Path="UpstreamUrl">
@@ -121,7 +117,7 @@
                 </Button.IsEnabled>
             </Button>
             <Button x:Name="ThemesButton"
-                    Grid.Column="2" Margin="5" ToolTip="{Binding ThemesButtonToolTip, Source={StaticResource MainConst}}"
+                    Grid.Column="2" Margin="5" ToolTip="{Binding Source={x:Static consts:MainConst.ThemesButtonToolTip}}"
                     Click="ThemesButton_Click">
                 <Button.Content>
                     <Binding Path="IsLightTheme">
@@ -132,7 +128,7 @@
                 </Button.Content>
             </Button>
             <Button x:Name="AboutButton"
-                    Grid.Column="3" Margin="5" Content="{Binding AboutButtonContent, Source={StaticResource MainConst}}" ToolTip="{Binding AboutButtonToolTip, Source={StaticResource MainConst}}"
+                    Grid.Column="3" Margin="5" Content="{Binding Source={x:Static consts:MainConst.AboutButtonContent}}" ToolTip="{Binding Source={x:Static consts:MainConst.AboutButtonToolTip}}"
                     Click="AboutButton_Click" />
         </Grid>
     </Grid>
